--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://fiyifoluwa.github.io/picdistro",
+  "homepage":".",
   "name": "picdistro",
   "version": "0.1.0",
   "private": true,
